# kicad-component-add-automation

./: .gitignore  KiCad_Component_Factory_Architecture.docx  KiCad_Component_Factory_Architecture.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: component-check.yml  mergeability.yml  python-tests.yml
docs/: data-ingestion-plan.md
schemas/: component.schema.json
src/kcf/application/: bootstrap.py  release_workflow.py  workflow_actions.py  workflow_status.py
src/kcf/cli/: main.py
src/kcf/domain/: component.py  schema.py  serialization.py  workflow.py
src/kcf/generation/: artifacts.py  footprint.py  formatting.py  hashing.py  project.py  release_manifest.py  source_manifest.py  symbol.py
src/kcf/infrastructure/: kicad.py
src/kcf/infrastructure/git/: adapter.py
src/kcf/ingestion/: __init__.py  normalized.py
src/kcf/ingestion/sources/: base.py  digikey.py
src/kcf/rendering/: svg.py
src/kcf/validation/: core.py  findings.py
tests/fixtures/: terminal_block.yaml
tests/fixtures/ingestion/: digikey_productdetails.json
tests/unit/: test_digikey_ingestion.py  test_generation.py  test_mvp_release_workflow.py  test_private_library_bootstrap.py  test_schema_validation.py  test_workflow_status.py
